# sightcall_scraping

./: CHANGELOG.md  Makefile  README.md  clone-and-install  data.json  pyproject.toml
.cursor/rules/00-architecture/: 0-clean-architecture.mdc
.cursor/rules/01-standards/: 1-clean-code.mdc  1-naming-conventions.mdc
.cursor/rules/02-programming-languages/: 2-python-naming-conventions.mdc  2-python.mdc
.cursor/rules/04-tools-and-configurations/: 4-package-installation.mdc
.cursor/rules/07-quality-assurance/: 7-testing-standards.mdc
.github/workflows/: continuous_integration.yaml  create_github_release.yaml
sightcall_scraping/: main.py
sightcall_scraping/application/: scrape_sightcall_website.py
sightcall_scraping/domain/: sitemap_parser.py
sightcall_scraping/domain/models/: scraped_document.py  url.py
sightcall_scraping/domain/ports/: content_fetcher.py  document_parser.py  scraped_document_storage.py
sightcall_scraping/infrastructure/: file_system_scraped_document_storage.py  html_document_parser.py  http_content_fetcher.py
sightcall_scraping/presentation/: cli.py
tests/: conftest.py  fixtures.py  test_main.py
tests/application/integration/: test_html_document_parser.py  test_http_content_fetcher.py
tests/application/unit/: test_scrape_sightcall_website.py
tests/domain/unit/: test_sitemap_parser.py
tests/infrastructure/unit/: test_file_system_scraped_document_storage.py
tests/presentation/e2e/: test_cli_scraper.py
