[project]
name = "sightcall-scraping"
version = "0.0.0"
description = "Scraping SightCall website"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = []

[project.urls]
"Bug Tracker" = "https://github.com/cmnemoi/sightcall_scraping/issues"
Changelog = "https://github.com/cmnemoi/sightcall_scraping/blob/main/CHANGELOG.md"
Homepage = "https://github.com/cmnemoi/sightcall_scraping/"
Repository = "https://github.com/cmnemoi/sightcall_scraping/"

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
    "python-semantic-release>=9.21.1",
]
lint = [
    "mypy>=1.15.0",
    "pytest-mypy>=1.0.1",
    "ruff>=0.11.10",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sightcall_scraping"]
