[project]
name = "sightcall-scraping"
version = "0.1.0"
description = "Scraping SightCall website"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
authors = [
    {name = "Charles-Meldhine Madi Mnemoi", email = "charlesmeldhine.madimnemoi@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
    "typer>=0.15.4",
]

[project.urls]
"Bug Tracker" = "https://github.com/cmnemoi/sightcall_scraping/issues"
Changelog = "https://github.com/cmnemoi/sightcall_scraping/blob/main/CHANGELOG.md"
Homepage = "https://github.com/cmnemoi/sightcall_scraping/"
Repository = "https://github.com/cmnemoi/sightcall_scraping/"

[project.scripts]
scraper = "sightcall_scraping.main:app"

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
    "python-semantic-release>=9.21.1",
]
lint = [
    "mypy>=1.15.0",
    "pytest-mypy>=1.0.1",
    "ruff>=0.11.10",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-asyncio>=0.25.2",
    "types-tqdm>=4.67.0.20250513",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sightcall_scraping"]
